--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,29 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
+# Core FastAPI & Server
+fastapi==0.115.0
+uvicorn[standard]==0.32.1
+
+# Database
+sqlalchemy==2.0.36
+psycopg2-binary==2.9.10
+
+# Data Processing
+pandas==2.2.3
 tabulate==0.9.0
-python-multipart==0.0.6
-pydantic==2.5.3
-fastapi
-pandas
-psycopg2-binary
-pydantic
-python-multipart
-sqlalchemy
-tabulate
-uvicorn
-bcrypt
-passlib
-python-jose
-bcrypt
-fastapi
-pandas
-passlib
-psycopg2-binary
-pydantic
-python-jose
-python-multipart
-sqlalchemy
-tabulate
-uvicorn[standard]
-python-pptx==0.6.23
-Pillow>=10.0.0
+
+# Authentication & Security
+bcrypt==4.2.1
+passlib==1.7.4
+python-jose[cryptography]==3.3.0
+
+# Request Handling
+python-multipart==0.0.17
+pydantic==2.10.3
+pydantic-settings==2.6.1
+
+# Presentation
+python-pptx==1.0.2
+Pillow==11.0.0
+
+# Additional
+typing-extensions==4.12.2
+
